crates/bevy_macros_compile_fail_tests/tests/deref_derive/invalid_attribute.fail.rs
use bevy_derive::Deref;

// Reason: `#[deref]` doesn't take any arguments

#[derive(Deref)]
struct TupleStruct(usize, #[deref()] String);

#[derive(Deref)]
struct Struct {
    foo: usize,
    #[deref()]
    bar: String,
}

fn main() {}
